# Leistungskurve_II

./: .gitignore  README.md  main.py  power_curve.py  power_curve_results.csv  pyproject.toml
source/: __init__.py  app.py  power_curve.py  power_curve_results_zones.csv
