[project]
name = "Leistungskurve_II"
version = "1.0.0"
description = "Power Curve Analysis - compute and visualize power curves from activity data"
authors = [
    {name = "Antonio Mrkonja", email = "antoniomrkonja04@gmail.com"},
]
dependencies = ["pandas>=2.3.3", "matplotlib>=3.9.4", "numpy>=2.0.2"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
